--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,10 @@
   "background": {
     "scripts": ["backgroundpage.js"]
   },
-  "permissions": ["tts"]
+  "browser_action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+  },
+  "permissions": ["tts", "storage", "activeTab", "https://ajax.googleapis.com/"]
 
 }
