--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "manifest_version": 2,
 
-  "name": "Chrome extension for studying Thai",
+  "name": "Simple Thai Translation",
   "description": "Simply activate the extension when on a thai website and then highlight words you don't know.",
   "version": "1.0",
+
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+            "128": "icon128.png" },
 
   "content_scripts": [
     {
@@ -18,9 +22,10 @@
     "scripts": ["backgroundpage.js"]
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon16.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["tts", "storage", "activeTab", "https://ajax.googleapis.com/"]
+  "permissions": ["tts", "storage", "activeTab", "https://ajax.googleapis.com/",
+      "*://*/*", "https://*/*", "http://*/*"] // request diff-origin request policy stuff
 
 }
